Fix glyphs table spacing

--- a/source/assets/stylesheets/partials/_settings.sass
+++ b/source/assets/stylesheets/partials/_settings.sass
@@ -11,6 +11,7 @@ $red: #f00
 $light-green: #00ffa0
 
 // sizes
+$huge-spacer: 6rem
 $default-spacer: 3rem
 $small-spacer: 2rem
 $tiny-spacer: 1rem
